feat(customers): complete customer management